@@ -1,3 +1,9 @@
+Mar 8, 2007
+
+  * FIXED: locking issue in rdf_reachable/3 and maintaining active-query
+    count.  Thanks to Jacco van Ossenbruggen and Michiel Hildebrand for
+    a reproducable case.
+
 Mar 6, 2007
 
   * ADDED: application/rdf+xml to rdf_http_plugin.pl.  Yves Raimond.
